my-apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  replicas: 1
  strategy:
    type: Recreate # Home Assistant needs to recreate to pick up volume changes
  template:
    metadata:
      labels:
        app.kubernetes.io/name: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: "ghcr.io/home-assistant/home-assistant:stable"
          ports:
            - containerPort: 8123
              name: http
          volumeMounts:
            - name: config-volume
              mountPath: /config
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2048Mi
      volumes:
        - name: config-volume
          persistentVolumeClaim:
            claimName: home-assistant-config
